SIS2-262: Added filter-wrapper position and z-index to prevent overlapping issues on multiple dropdown lists

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/01-particles/select.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/01-particles/select.css
@@ -128,3 +128,8 @@
     }
   }
 }
+
+.filter-wrapper {
+  position: relative;
+  z-index: 2;
+}
